# beatodds

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
configs/: china_sources.json
docs/: china_harness_audit_log.md  china_harness_last_run_point_check_zh.md  china_harness_strong_report_protocol_zh.md  china_harness_test_plan.md  current_functionality.md  gpt_context_report.md  md_first_harness_validation.md  paper_trading_workflow_ppt.html  source_access_implementation_report_zh.md  source_internal_access_protocol_zh.md
docs/final_report/: README.md  checklist.tex  harness_writing_notes.md  main.bbl  main.tex  neurips_2026.sty  references.bib
docs/final_report/sections/: 01_introduction.tex  02_problem_setting.tex  03_system_overview.tex  (+6 more)
gui/: __init__.py  server.py
gui/web/: app.js  index.html  styles.css
ref/: README.md
scripts/: audit_china_harness_run.py  backfill_markets.py  china_harness_tool.py  finalize_video_resource_report.py  render_forecast_report_pdf.py  render_research_process_ppt.py  run_batch_eval.py  run_china_harness.py  run_forecast.py  run_gui.py  run_paper_account.py  run_paper_eval.py  run_paper_eval_report.ps1  run_paper_maintainer.py  run_paper_trader.py  run_scanner.py  run_top_level_china_codex.sh  summarize_china_parallel_runs.py  top_level_china_main_agent_prompt.md
tests/: test_china_harness.py  test_china_info.py  test_eval_store.py  test_gamma_client.py  test_paper_eval.py  test_paper_store.py  test_paper_strategy.py  test_smoke.py  test_workflow_store.py
workflow_records/: README.md
(+52 files in other folders)
