[project]
name = "beatodds"
version = "0.1.0"
description = "Polymarket mispricing detection agent"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client-v2",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.4",
    "duckdb>=1.0.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pytz>=2024.1",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "schedule>=1.2",
    "tavily-python>=0.5",
    "newsapi-python>=0.2.7",
    "aiohttp>=3.9",
    "tenacity>=8.2",
    "openai>=2.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/beatodds"]

[tool.uv.sources]
py-clob-client-v2 = { path = "ref/official-polymarket/py-clob-client-v2" }

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["ref"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
